# textyash.com

./: .eslintignore  .gitignore  .prettierignore  Cargo.toml  README.md  bun.lockb  drizzle.config.ts  flake.nix  justfile  package-lock.json  package.json  run.sh  scratch  svelte.config.js  tailwind.config.js  tailwind.config.ts  test.sh  vite.config.ts
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 204sg7mwshd8hbwrbk6m6d8x3iz66yli-source  rngmqzfs01nsjpsqczx1znrrcwxy278q-source
src/: ambient.d.ts  app.css  app.d.ts  app.html  app.postcss  db.rs  hooks.server.ts  main.rs  posts.rs
src/db/: mod.rs
src/lib/: helper.ts  helpers.ts  types.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  Links.svelte  data.js  data.ts
static/css/: input.css  output.css
static/images/: README.md
supabase/: config.toml
supabase/migrations/: 0000_bitter_kabuki.sql  0000_large_pretty_boy.sql  0000_worried_skreet.sql  0001_giant_betty_brant.sql  0001_smart_menace.sql  0001_sudden_talon.sql  0002_amazing_cerise.sql  0002_easy_grey_gargoyle.sql  0002_overrated_ben_grimm.sql  0003_mushy_hex.sql  0003_wonderful_nekra.sql  0004_cheerful_bug.sql  0004_cooing_spyke.sql  0005_pink_thanos.sql  0006_living_nicolaos.sql  0007_dapper_black_bolt.sql  0008_neat_cerebro.sql  0009_secret_the_call.sql  0010_last_dakota_north.sql  0012_simple_shiver_man.sql  (+2 more)
templates/: index.html  layout.html
tests/: development.rs
ui/: justfile  package.json  tailwind.config.js
(+101 files in other folders)
