[package]
name = "textyash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["macros"] }
# httpc-test = { version = "0.1.9", features = ["colored", "color-output"] }
libsql = "0.2.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
shuttle-axum = "0.37.0"
shuttle-runtime = "0.37.0"
slug = "0.1.5"
snafu = "0.8.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["fs"] }
url = "2.5.0"
